--- a/index.html
+++ b/index.html
@@ -10,5 +10,24 @@
 </head>
 <body>
     
+    <header>
+        <div class="header-inner-container">
+
+            <div class="header-tect-container">
+                <h1>AWESOME STARTUP EMPLOYEE DIRECTORY</h1>
+            </div>
+
+            <div class="search-container">
+
+
+            </div>
+
+        </div>
+    </header>
+
+    <div id="gallery" class="gallery">
+
+    </div>
+
 </body>  
 </html>
